Project/p4/tests/t120.err
Semantic error on line 5: Incorrect type (double) for initial value of variable 'i' of type (int).
Semantic error on line 11: Variable 'foo' was not declared before it was used.
Semantic error on line 14: Incorrect type (string) for initial value of variable 'x' of type (double).
Semantic error on line 20: Variable 'bar' was not declared before it was used.
